--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Julieta
-middle_name:
-last_name: Valenzuela Correa
+middle_name: Valenzuela
+last_name: Correa
 email: julieta@nyu.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
