--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  You can contact me by email: julieta[at]nyu.edu
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -132,9 +132,9 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
-permalink: /blog/:year/:title/
+blog_name: # blog_name will be displayed in your blog page
+blog_description:
+permalink:
 lsi: false # produce an index for related posts
 
 # Pagination
@@ -143,7 +143,7 @@ pagination:
 
 related_blog_posts:
   enabled: false
-  max_related: 5
+  max_related: 0
 
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out the information below.
